--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,7 +1,15 @@
+@import '../styles/variables';
+
 *,
 *::after,
 *::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: FiraGO;
+  background: $gray--1;
+  min-height: 100vh;
 }
