--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -23,14 +23,25 @@
 
   &__main {
     user-select: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 24px;
-    width: 100%;
-    max-width: 684px;
     margin: $mxAuto;
-    text-align: center;
-    margin-bottom: 64px;
+
+    &--tags {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      text-align: center;
+      width: 100%;
+      max-width: 690px;
+      margin: $mxAuto;
+      gap: 24px;
+      margin-bottom: 64px;
+    }
+
+    &--blogs {
+      display: grid;
+      grid-template-columns: repeat(3, auto);
+      column-gap: 32px;
+      row-gap: 56px;
+    }
   }
 }
