--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -42,6 +42,8 @@
       grid-template-columns: repeat(3, auto);
       column-gap: 32px;
       row-gap: 56px;
+      margin-bottom: 68px;
+      justify-content: center;
     }
   }
 }
