--- a/src/layouts/AddBlogLayout/styles.module.scss
+++ b/src/layouts/AddBlogLayout/styles.module.scss
@@ -1,17 +1,14 @@
 @import "../../assets/styles/variables";
 
 .layout {
-  &__header {
-    &--icon {
-      display: flex;
-      align-self: center;
-      justify-content: space-between;
-      align-items: center;
-      padding: 28px 76px;
+  &--icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 28px 76px;
 
-      background: $white--1;
-      border-bottom: 1px solid $white--2;
-    }
+    background: $white--1;
+    border-bottom: 1px solid $white--2;
   }
 
   &__main {
