added half of form and its corresponding logic

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -11,11 +11,14 @@ $white--2: #e4e3eb;
 
 $gray--1: #f3f2fa;
 $gray--2: #404049;
-$gray--3: #85858D;
+$gray--3: #85858d;
 
-$black--1: #1A1A1F;
+$black--1: #1a1a1f;
 
-$blue--1: #5D37F3;
+$blue--1: #5d37f3;
+
+$errorPrimary: #ea1919;
+$successPrimary: #14d81c;
 
 //* others *//
 $mxAuto: 0 auto;
