--- a/src/pages/Blog/styles.module.scss
+++ b/src/pages/Blog/styles.module.scss
@@ -41,7 +41,7 @@
     color: $gray--3;
     font-size: 12px;
     font-weight: 400;
-    line-height: 16px; /* 133.333% */
+    line-height: 16px;
   }
 
   &__title {
@@ -61,6 +61,6 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px; /* 175% */
+    line-height: 28px;
   }
 }
