--- a/src/components/Blog/Carousel/styles.module.scss
+++ b/src/components/Blog/Carousel/styles.module.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/styles/global.scss";
+
 .container {
   display: flex;
   flex-direction: column;
@@ -9,7 +11,7 @@
     justify-content: space-between;
 
     &--title {
-      color: #1a1a1f;
+      color: $black--1;
       font-size: 32px;
       font-weight: 700;
       line-height: 40px;
