--- a/src/layouts/AddBlogLayout/styles.module.scss
+++ b/src/layouts/AddBlogLayout/styles.module.scss
@@ -23,4 +23,17 @@
       width: 100%;
     }
   }
+
+  &--modalText {
+    color: $black--1;
+    text-align: center;
+    font-family: $family--primary;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 28px;
+  }
+
+  &--modalBtn {
+    margin-bottom: 20px;
+  }
 }
