new product form

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -10,6 +10,7 @@
 
 body {
   font-family: FiraGO;
-  background: $gray--1;
+  // background: $gray--1;
+  background: #fbfaff;
   min-height: 100vh;
 }
