--- a/src/components/AddBlog/Label/styles.module.scss
+++ b/src/components/AddBlog/Label/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/styles/global.scss";
+@import '../../../assets/styles/global.scss';
 
 .label {
   font-family: $family--primary;
@@ -6,26 +6,4 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
-
-  &::after {
-    content: "*";
-    position: absolute;
-    font-size: 16px;
-    left: 59px;
-  }
-}
-
-.left {
-  &::after {
-    content: "*";
-    position: absolute;
-    font-size: 16px;
-    left: 80px;
-  }
-}
-
-.noStyle {
-  &::after {
-    content: unset;
-  }
 }
